@@ -34,6 +34,8 @@ Enhancements:
 * Fixed bug 1385599 with changes by Yannick Molin. SSL settings are now
   conditioned on protocol ftp or ftps.
 * Fixed bug 1236248 with changes by az, manpage warning about --extra-clean.
+* Fixed bug 1255453 with changes by Gaudenz Steinlin, report backend import
+  results, both normal and failed, at INFO log level.
 
 
 New in v0.7.00 (2014/10/23)
